# mpu9250

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  cppcheck.cmake  doxygen.cmake  suppressions.xml  uncrustify.cfg  uncrustify.cmake
.github/workflows/: ci.yml
include/: Mpu9250.h  Mpu9250_Registers.h
src/: Mpu9250.c
